# Telegrame-Bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  README.md  docker-compose.public.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
docs/: TODO.md  入群验证与AI欢迎语.md  发布与打包方案.md
packaging/: generate_release_notes.py  launcher.py  pyinstaller.spec
src/bot/: bootstrap.py  config.py  hongbao_service.py  lottery_service.py  main.py  points_service.py  runtime_manager.py  runtime_state_store.py  system_config.py  title_redemption_service.py  version.py
src/bot/ai/: __init__.py  openai_client.py  prompts.py  redact.py
src/bot/api/: __init__.py  http_api.py
src/bot/domain/: __init__.py  models.py  moderation.py  policy.py  rules.py
src/bot/storage/: __init__.py  db.py  migrations.py  repo.py
src/bot/telegram/: __init__.py  adapter_ptb.py  admin_service.py  commands.py  inspector.py  lottery.py  permissions.py
src/bot/utils/: __init__.py  rate_limit.py  (+1 more)
tests/: test_admin_service.py  test_ai_parse.py  test_chat_discovery.py  test_config_service.py  test_e2e_flow.py  test_enforcer_notices.py  test_hongbao_service.py  test_http_api.py  test_lottery_service.py  test_openai_client_fallback.py  test_permissions.py  test_points_service.py  test_policy.py  test_repo.py  test_rules.py  test_runtime_manager.py  test_runtime_state_store.py  test_welcome_ai.py
web-admin/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web-admin/src/: App.tsx  main.tsx  styles.css
(+37 files in other folders)
